--- a/stonePaperSci/index.html
+++ b/stonePaperSci/index.html
@@ -28,7 +28,7 @@
         </div>
         <br>
         <div class="row mt-4">
-            <div class="col-lg-6 col-md-9 col-11 mx-auto">
+            <div class="col-lg-6 col-12 mx-auto fs-2">
                 <table class="table">
                     <thead id="result">
                         <tr>
